--- a/style.css
+++ b/style.css
@@ -8,51 +8,49 @@
 html,
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    line-height: .7em;
-    overflow: hidden;
-}
-
-/* a {
-    color: #333;
-    text-decoration: none;
-} */
-
-h1,
-h2,
-h3 {}
-
-p {
-    margin: 10px 0;
+    line-height: 1.1em;
+    /* overflow: hidden; */
+    scroll-behavior: smooth;
 }
 
 /* Navbar */
 #navbar {
     background: rgb(0, 0, 0);
-    color: #fff;
+    /* background-color: transparent; */
+    opacity: 75%;
+    color: rgb(255, 255, 255);
     overflow: auto;
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    z-index: +1;
+    z-index: 32s;
+    padding-right: 3.5rem;
+
 }
 
-/* logo */
+a {
+    text-decoration: none;
+}
+
 #logo {
-    width: 120px;
-    height: 120px;
-    margin-top: 4%;
+    width: 100px;
+    height: 100px;
     margin-left: 5%;
-
-}
-
-li:nth-child(2) {
-    margin-left: 48%;
+    display: flex;
 }
 
 #navar a {
-    color: #fff;
+    color: rgb(255, 255, 255);
 }
 
 #navbar ul {
     list-style: none;
     display: flex;
-    font-size: 25px;
+    font-size: 20px;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -62,14 +60,583 @@ li:nth-child(2) {
 }
 
 #navbar ul li a:hover {
-    background: rgb(167, 85, 85);
+    background: rgb(114, 109, 109);
 }
 
-#showcase {
-    /* background: url(./images/optin\ 5.jpg) center center/cover; */
-    height: 600px;
+#navbar ul li {
+    cursor: pointer;
+}
+
+#navbar ul li a {
+    padding: 0 14px;
+    margin: 0 9px;
+    color: #beacdf;
+    cursor: pointer;
+    text-decoration: none;
+    position: relative;
+}
+
+/* navbar hover */
+#navbar ul li a:before {
+    content: "";
+    background-color: #868583;
+    position: absolute;
+    width: 0%;
+    right: 0;
+    bottom: -5px;
+    transition: all 0.3s;
+    height: 2px;
+
+}
+
+#navbar ul li a:hover::before {
+    width: 100%;
+}
+
+#navbar ul li a::after {
+    content: "";
+    background-color: #868583;
+    position: absolute;
+    width: 0%;
+    left: 0;
+    top: -5px;
+    transition: 0.5s;
+    height: 2px;
+    transform: translateX(200%);
+}
+
+#navbar ul li a:hover::after {
+    width: 100%;
+    translateX(200%)
+}
+
+#navbar ul li a:hover {
+    color: #000000;
+
+}
+
+/* titles */
+h2 {
+    color: #fff;
+    align-items: center;
+    justify-content: center;
+    font-size: 70px;
+}
+
+h3 {
+    color: #fff;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
+}
+
+h4 {
+    color: #fff;
+    font-size: 40px;
+    padding-bottom: 20%;
 }
 
 .text-primary {
+    color: rgb(122, 117, 117);
+}
+
+.text-primary1 {
+    color: rgb(158, 154, 154);
+}
+
+
+/* home section */
+#home {
+    /* background: url(/images/8.jpg) center center/cover no-repeat; */
+    background: #000000;
+    height: 100vh;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+}
+
+
+/* about section */
+#about {
+    background: url(/images/about.jpg) center center/cover no-repeat;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: flex-start;
+}
+
+.P-container {
+    font-size: 14px;
+    color: black;
+    width: 80%;
+    display: flex;
+    justify-content: left;
+    text-align: left;
+    align-items: center;
+    margin-left: 3rem;
+
+}
+
+.first-p {
+    width: 40%;
+    height: 80%;
+    margin-bottom: 30rem;
+    color: #868583;
+}
+
+#about h4 {
+    margin-top: 9%;
+    margin-left: 3rem;
+}
+
+/* Skills section */
+#Skills {
+    background: url(/images/9.jpg) center center/cover no-repeat;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.container {
+    top: 0%;
+    left: 30%;
+    width: 500px;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    background: rgb(0, 0, 0);
+    opacity: 80%;
+    border: 1px solid black;
+
+}
+
+.container .skills {
+    position: relative;
+    padding: 15px 20px;
+    margin: 20px 0;
+    border: 1px solid black;
+    box-shadow: inset 0 0 25px (0, 0, 0, 0.5);
+    display: flex;
+}
+
+.container h3 {
+    margin-bottom: 2rem;
+    margin-top: 1.5rem;
+}
+
+.my-skills-text {
+    color: antiquewhite;
+}
+
+.container .skills h1 {
+    color: #fff;
+    margin: 0;
+    padding: 0;
+    float: left;
+    font-size: small;
+}
+
+.container .skills .percent {
+    float: right;
+    color: rgb(255, 255, 255);
+
+}
+
+.container .skills .bar {
+    position: relative;
+    width: 100%;
+    height: 2px;
+    margin: 15px 0 10px;
+}
+
+.container .skills .progress {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 87%;
+    height: 100%;
+    background: linear-gradient(to right, #333, #888);
+}
+
+.container .skills.progress::before {
+    content: '';
+    position: absolute;
+    top: -5px;
+    right: 0;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background: #fff;
+    box-shadow: 0 0 25px rgb(126, 126, 126);
+}
+
+/* Projects section */
+.projects {
+    background-image: url(./images/unnamed.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    padding: 4rem 0;
+    height: 100vh;
+    background-color: #000000;
+    opacity: 100%;
+}
+
+/* .projects h2 {
+    color: rgb(177, 173, 173);
+    font-family: exsospace;
+    font-size: 3rem;
+    letter-spacing: 4px;
+} */
+
+.card-container {
+    /* background-color: aquamarine; */
+    /* opacity: 0.9; */
+    width: 70%;
+    /* box-shadow: 15px 15px 5px pink; */
+    display: flex;
+    justify-content: center;
+    padding: 50px;
+    gap: 4rem;
+}
+
+.proj-img-wrapper {
+    height: 300px;
+
+    /* overflow: hidden; */
+}
+
+.project-img {
+    width: 250px;
+    height: 300px;
+    object-fit: cover;
+}
+
+.card {
+    background-color: white;
+    box-shadow: 5px 6px 10px 0 rgba(0, 0, 0, 0.2);
+    transition: 1s;
+    height: 300px;
+    /* width: 300px; */
+    box-shadow: 8px 8px 5px 3px rgb(163, 167, 165);
+    /* width: 60%; */
+    /* overflow: hidden; */
+}
+
+.card .card-text-container {
+    text-align: center;
+    padding: 1rem;
+    margin-top: 3rem;
+    z-index: 1;
+    position: relative;
+    padding: 0.5rem;
+    box-shadow: 10px 12px 20px 0 rgba(0, 0, 0, 0.2);
+    /* background-color: rgb(245, 198, 206); */
+}
+
+.card-text-container h4 {
+    font-size: 1.7rem;
+    color: rgb(132, 136, 134);
+    text-shadow: 2px 2px 2px black;
+}
+
+.card-text-container p {
+    font-weight: bold;
+    font-size: 1.4rem;
+    color: rgb(132, 136, 134);
+    text-shadow: 2px 2px black;
+}
+
+.card:hover {
+    transform: scale(1.1);
+    box-shadow: 0 8px 16px 0 rgba(120, 134, 104, 0.2);
+}
+
+.container {
+    padding: 2px 16px;
+}
+
+
+/* Contact section */
+
+.contact .title::after {
+    content: "get in touch";
+}
+
+.contact .contact-content .column {
+    width: calc(50% - 30px);
+}
+
+.contact .contact-content .text {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.contact .contact-content .left p {
+    text-align: justify;
+}
+
+.contact .contact-content .left .icons {
+    margin: 10px 0;
+}
+
+.contact .contact-content .row {
+    display: flex;
+    height: 65px;
+    align-items: center;
+}
+
+.contact .contact-content .row .info {
+    margin-left: 30px;
+}
+
+.contact .contact-content .row i {
+    font-size: 25px;
+    color: rgb(95, 92, 92);
+    ;
+}
+
+.contact .contact-content .info .head {
+    font-weight: 500;
+}
+
+.contact .contact-content .info .sub-title {
     color: #333;
+}
+
+.contact .right form .fields {
+    display: flex;
+}
+
+.contact .right form .field,
+.contact .right form .fields .field {
+    height: 45px;
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.contact .right form .textarea {
+    height: 80px;
+    width: 100%;
+}
+
+.contact .right form .name {
+    margin-right: 10px;
+}
+
+.contact .right form .field input,
+.contact .right form .textarea textarea {
+    height: 100%;
+    width: 100%;
+    border: 1px solid lightgrey;
+    border-radius: 6px;
+    outline: none;
+    padding: 0 15px;
+    font-size: 17px;
+    font-family: 'Poppins', sans-serif;
+    transition: all 0.3s ease;
+}
+
+.contact .right form .field input:focus,
+.contact .right form .textarea textarea:focus {
+    border-color: #B3B3B3;
+}
+
+.contact .right form .textarea textarea {
+    padding-top: 10px;
+    resize: none;
+}
+
+.contact .right form .button-area {
+    display: flex;
+    align-items: center;
+}
+
+.right form .button-area button {
+    color: #fff;
+    display: block;
+    width: 160px !important;
+    height: 45px;
+    outline: none;
+    font-size: 18px;
+    font-weight: 500;
+    border-radius: 6px;
+    cursor: pointer;
+    flex-wrap: nowrap;
+    background: rgb(95, 92, 92);
+    border: 2px solid rgb(95, 92, 92);
+    transition: all 0.3s ease;
+}
+
+.right form .button-area button:hover {
+    color: rgb(95, 92, 92);
+    background: none;
+}
+
+.sicons {
+    display: flex;
+    justify-content: center;
+}
+
+@media (max-width: 1104px) {
+    .about .about-content .left img {
+        height: 350px;
+        width: 350px;
+    }
+}
+
+@media (max-width: 991px) {
+    .max-width {
+        padding: 0 50px;
+    }
+}
+
+@media (max-width: 947px) {
+    .menu-btn {
+        display: block;
+        z-index: 999;
+    }
+
+    .menu-btn i.active:before {
+        content: "\f00d";
+    }
+
+    .navbar .menu {
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        left: -100%;
+        top: 0;
+        background: #111;
+        text-align: center;
+        padding-top: 80px;
+        transition: all 0.3s ease;
+    }
+
+    .navbar .menu.active {
+        left: 0;
+    }
+
+    .navbar .menu li {
+        display: block;
+    }
+
+    .navbar .menu li a {
+        display: inline-block;
+        margin: 20px 0;
+        font-size: 25px;
+    }
+
+    .home .home-content .text-2 {
+        font-size: 70px;
+    }
+
+    .home .home-content .text-3 {
+        font-size: 35px;
+    }
+
+    .home .home-content a {
+        font-size: 23px;
+        padding: 10px 30px;
+    }
+
+    .max-width {
+        max-width: 930px;
+    }
+
+    .about .about-content .column {
+        width: 100%;
+    }
+
+    .about .about-content .left {
+        display: flex;
+        justify-content: center;
+        margin: 0 auto 60px;
+    }
+
+    .about .about-content .right {
+        flex: 100%;
+    }
+
+    .services .serv-content .card {
+        width: calc(50% - 10px);
+        margin-bottom: 20px;
+    }
+
+    .skills .skills-content .column,
+    .contact .contact-content .column {
+        width: 100%;
+        margin-bottom: 35px;
+    }
+}
+
+@media (max-width: 690px) {
+    .max-width {
+        padding: 0 23px;
+    }
+
+    .home .home-content .text-2 {
+        font-size: 60px;
+    }
+
+    .home .home-content .text-3 {
+        font-size: 32px;
+    }
+
+    .home .home-content a {
+        font-size: 20px;
+    }
+
+    .services .serv-content .card {
+        width: 100%;
+    }
+}
+
+@media (max-width: 500px) {
+    .home .home-content .text-2 {
+        font-size: 50px;
+    }
+
+    .home .home-content .text-3 {
+        font-size: 27px;
+    }
+
+    .about .about-content .right .text,
+    .skills .skills-content .left .text {
+        font-size: 19px;
+    }
+
+    .contact .right form .fields {
+        flex-direction: column;
+    }
+
+    .contact .right form .name,
+    .contact .right form .email {
+        margin: 0;
+    }
+
+    .right form .error-box {
+        width: 150px;
+    }
+
+    .scroll-up-btn {
+        right: 15px;
+        bottom: 15px;
+        height: 38px;
+        width: 35px;
+        font-size: 23px;
+        line-height: 38px;
+    }
 }
